[metadata]
name = aioping
description = An async python ICMP ping implementation using raw sockets.
url = https://github.com/curtisforrester/aioping
license = GNU
license_file = LICENSE
keywords = network tools
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries

[options]
packages = find:
python-requires = >=3.7

[options.packages.find]
include = aioping
exclude = tests
